--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "autoprefixer": "^10.4.19",
+    "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "next": "14.2.3",
     "postcss-cli": "^11.0.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.1",
     "react-spinner": "^0.2.7",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
