--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.23.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
